--- a/sponsor.ui
+++ b/sponsor.ui
@@ -515,8 +515,8 @@ QPushButton:checked {
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
+      <x>20</x>
+      <y>90</y>
       <width>841</width>
       <height>441</height>
      </rect>
@@ -1182,8 +1182,8 @@ QTableWidget QTableWidget::item:selected {
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>30</y>
+      <x>20</x>
+      <y>20</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -1201,6 +1201,26 @@ QTableWidget QTableWidget::item:selected {
       <height>40</height>
      </size>
     </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_2">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>30</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Alphabet A -&gt;Z</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>categories</string>
+     </property>
+    </item>
    </widget>
   </widget>
   <widget class="QFrame" name="info_frame">
