added search and working on api calls

--- a/emission.ui
+++ b/emission.ui
@@ -1287,6 +1287,16 @@ QTableWidget::Item{
      </size>
     </property>
    </widget>
+   <widget class="QLineEdit" name="searchBar">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>50</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
