--- a/addemission1.ui
+++ b/addemission1.ui
@@ -522,7 +522,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -554,13 +566,15 @@
 	background:#00855C;
 	border:none;
 	color:white;
+ border-radius: 10px;
 }
 
 #pushButton_5:hover
 {
-	background:#2D2D2D;
+ border-radius: 10px;
+	background:solid green;
 	border:2px solid #00855C;
-	color:#00855C;
+	color: solid white;
 }</string>
    </property>
    <property name="text">
@@ -589,6 +603,8 @@
 	color:black;
 	border:none;
 	padding-left:6px;
+   border-radius:5px;
+
 }</string>
    </property>
    <property name="currentSection">
@@ -637,7 +653,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -686,6 +714,7 @@
    <property name="styleSheet">
     <string notr="true">#pushButton_6
 {
+ border-radius: 10px;
 	background:#EC3245;
 	border:none;
 	color:white;
@@ -693,9 +722,10 @@
 
 #pushButton_6:hover
 {
-	background:#2d2d2d;
+ border-radius: 10px;
+	background:solid red;
 	border:2px solid #EC3245;
-	color:#EC3245;
+	color:solid white;
 }</string>
    </property>
    <property name="text">
