--- a/addemployee.ui
+++ b/addemployee.ui
@@ -685,7 +685,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -736,7 +748,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -805,6 +829,7 @@
    <property name="styleSheet">
     <string notr="true">#pushButton_6
 {
+ border-radius: 10px;
 	background:#EC3245;
 	border:none;
 	color:white;
@@ -812,9 +837,10 @@
 
 #pushButton_6:hover
 {
-	background:#2d2d2d;
+ border-radius: 10px;
+	background:solid red;
 	border:2px solid #EC3245;
-	color:#EC3245;
+	color:solid white;
 }</string>
    </property>
    <property name="text">
@@ -887,13 +913,15 @@
 	background:#00855C;
 	border:none;
 	color:white;
+ border-radius: 10px;
 }
 
 #pushButton_5:hover
 {
-	background:#2D2D2D;
+ border-radius: 10px;
+	background:solid green;
 	border:2px solid #00855C;
-	color:#00855C;
+	color: solid white;
 }</string>
    </property>
    <property name="text">
@@ -1022,7 +1050,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -1515,7 +1555,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -2136,7 +2188,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
@@ -2609,7 +2673,19 @@
 	color:black;
 	border:none;
 	padding-left:6px;
-}</string>
+}
+QLineEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
    <property name="text">
     <string/>
