--- a/addequipment.ui
+++ b/addequipment.ui
@@ -20,13 +20,28 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>130</y>
+     <y>121</y>
      <width>113</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
+    <string notr="true">
+
+QLineEdit {
+
+   background-color: rgb(255, 255, 255);
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -34,7 +49,7 @@
     <rect>
      <x>70</x>
      <y>130</y>
-     <width>111</width>
+     <width>51</width>
      <height>21</height>
     </rect>
    </property>
@@ -88,26 +103,54 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>190</y>
+     <y>181</y>
      <width>113</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
+    <string notr="true">
+QLineEdit {
+
+   background-color: rgb(255, 255, 255);
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="stateE">
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>260</y>
+     <y>251</y>
      <width>113</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
+    <string notr="true">
+QLineEdit {
+
+   background-color: rgb(255, 255, 255);
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
   </widget>
   <widget class="QLabel" name="stockE">
@@ -127,13 +170,27 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>330</y>
+     <y>321</y>
      <width>113</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
+    <string notr="true">
+QLineEdit {
+
+   background-color: rgb(255, 255, 255);
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+QTextEdit {
+    border: 2px solid #141E46;
+    border-radius: 10px;
+    padding: 1.5px;
+}
+</string>
    </property>
   </widget>
  </widget>
