--- a/emissionedit.ui
+++ b/emissionedit.ui
@@ -64,6 +64,7 @@
    <property name="styleSheet">
     <string notr="true">#pushButton_6
 {
+ border-radius: 10px;
 	background:#EC3245;
 	border:none;
 	color:white;
@@ -71,9 +72,10 @@
 
 #pushButton_6:hover
 {
-	background:#2d2d2d;
+ border-radius: 10px;
+	background:solid red;
 	border:2px solid #EC3245;
-	color:#EC3245;
+	color:solid white;
 }</string>
    </property>
    <property name="text">
@@ -224,13 +226,15 @@
 	background:#00855C;
 	border:none;
 	color:white;
+ border-radius: 10px;
 }
 
 #pushButton_5:hover
 {
-	background:#2D2D2D;
+ border-radius: 10px;
+	background:solid green;
 	border:2px solid #00855C;
-	color:#00855C;
+	color: solid white;
 }</string>
    </property>
    <property name="text">
