--- a/employeeedit.ui
+++ b/employeeedit.ui
@@ -1206,6 +1206,7 @@
    <property name="styleSheet">
     <string notr="true">#pushButton_6
 {
+ border-radius: 10px;
 	background:#EC3245;
 	border:none;
 	color:white;
@@ -1213,9 +1214,10 @@
 
 #pushButton_6:hover
 {
-	background:#2d2d2d;
+ border-radius: 10px;
+	background:solid red;
 	border:2px solid #EC3245;
-	color:#EC3245;
+	color:solid white;
 }</string>
    </property>
    <property name="text">
@@ -2511,13 +2513,15 @@
 	background:#00855C;
 	border:none;
 	color:white;
+ border-radius: 10px;
 }
 
 #pushButton_5:hover
 {
-	background:#2D2D2D;
+ border-radius: 10px;
+	background:solid green;
 	border:2px solid #00855C;
-	color:#00855C;
+	color: solid white;
 }</string>
    </property>
    <property name="text">
